# fmri-fm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
experiments/: clane.mplstyle  clane.v2.mplstyle
experiments/ablation_analysis/: ablation_analysis.ipynb
experiments/augmentation/: launch_eval_logistic_v2.sh  launch_eval_v2.sh  launch_pretrain.sh
experiments/benchmark_comparison/: analysis.ipynb
experiments/data_scaling/: data_scaling_analysis.ipynb  launch_eval_1.sh  launch_eval_v2.sh  probe_denselr_v2.yaml
experiments/decoders/: README.md  eval_masked_recon.ipynb  interpolation_analysis.ipynb  launch_eval_logistic_v2.sh  launch_eval_v2.sh  launch_pretrain.sh  launch_pretrain_1.sh  resubmit.py  submit.py
experiments/decoders/config/: hcp_task_eval.yaml  nsd_clip_class_eval.yaml  pretrain.yaml  ukbb_sex_eval.yaml
experiments/decoders/results/: masked_recon.csv
experiments/eval_v1/: launch_eval.sh  run.sh  submit.ipynb
experiments/finetune/: analysis.ipynb  finetune_full.yaml  finetune_lora.yaml  finetune_partial.yaml  finetune_scratch.yaml  launch_finetune.sh  launch_finetune_1.sh  launch_finetune_2.sh
experiments/flat_baselines/: launch_pretrain.sh
experiments/input_norm/: launch_eval_v2.sh  launch_eval_v2_1.sh  launch_pretrain_1.sh  pretrain_stream.yaml
experiments/input_space/: input_space_downstream.ipynb  input_space_flat_viz.ipynb  input_space_method_viz.ipynb  input_space_pca.ipynb  launch_eval_1.sh  launch_eval_2.sh  launch_pretrain.sh  mni_cortex_testing.ipynb  pretrain.yaml
experiments/input_space_testing/: input_space_flat_viz.ipynb
experiments/input_space_v2/: downstream_analysis.ipynb  grid_analysis.ipynb  launch_eval.sh  launch_eval_6.sh  launch_eval_logistic_v2_1.sh  launch_eval_v2.sh  launch_eval_v2_1.sh  launch_pretrain_1.sh
experiments/input_space_v3/: input_space_compute.ipynb
experiments/input_space_v3/results/: epoch_times_flat_1.txt  epoch_times_flat_2.txt  epoch_times_flat_3.txt  epoch_times_flat_4.txt  epoch_times_flat_5.txt  epoch_times_flat_6.txt  epoch_times_flat_7.txt  epoch_times_flat_8.txt  epoch_times_mni_cortex.txt  epoch_times_mni_cortex_2.txt  epoch_times_mni_cortex_3.txt  epoch_times_mni_cortex_4.txt  epoch_times_mni_cortex_5.txt  epoch_times_mni_cortex_6.txt  epoch_times_mni_cortex_7.txt  epoch_times_mni_cortex_8.txt  (+9 more)
experiments/long_seq/: downstream_analysis.ipynb  launch_eval_logistic_v2.sh  launch_eval_v2.sh  launch_pretrain.sh  pretrain.yaml
experiments/masking/: launch_eval.sh  launch_eval_logistic_v2.sh  launch_eval_v2.sh  launch_pretrain.sh
experiments/mni_cortex_testing/: test_mni_cortex_mask.ipynb
experiments/model_scaling/: launch_eval_1.sh  launch_eval_v2.sh  launch_pretrain.sh  model_scaling_analysis.ipynb
experiments/patch_size/: launch_eval.sh  launch_eval_logistic_v2.sh  launch_eval_v2.sh  launch_pretrain.sh
experiments/pos_embed/: launch_eval_logistic_v2.sh  launch_eval_v2.sh
experiments/pretrain_mix/: launch_pretrain_1.sh
experiments/subcortical/: downstream_analysis.ipynb  launch_eval_logistic_v2.sh  launch_eval_v2.sh  launch_pretrain.sh  pretrain.yaml
experiments/t_patch_size/: launch_eval_logistic_v2.sh  launch_eval_v2.sh
experiments/target_norm/: launch_eval_logistic_v2.sh  launch_eval_v2.sh
experiments/target_norm_v2/: launch_eval.sh  launch_eval_logistic_v2.sh  launch_eval_v2.sh  launch_pretrain.sh
notebooks/: quickstart.ipynb
src/cortex_mae/: data.py  inference.py  main_pretrain.py  masking.py  models_mae.py  modules.py  nisc.py  test_inference.py  test_transforms.py  transforms.py  utils.py  visualization.py
src/data/: codecs.py
src/flat_mae/: data.py  main_pretrain.py  models_mae.py  modules.py  test_transforms.py  transforms.py  utils.py  visualization.py
(+13 files in other folders)
