[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fmri-fm"
dynamic = ["version"]
description = "MedARC fMRI foundation model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "einops",
    "huggingface_hub",
    "ipython",
    "jaxtyping",
    "jupyter",
    "matplotlib",
    "neuromaps",
    "nibabel",
    "nsdcode",
    "numpy",
    "omegaconf",
    "pre-commit",
    "pytest",
    "pycortex",
    "scikit-learn",
    "scipy",
    "timm",
    "torch==2.8.0",
    "torchvision",
    "tqdm",
    "wandb",
    "webdataset",
    "cloudpathlib[s3]",
    "s3fs",
    "lightning-sdk",
    "scikit-image",
]

[project.optional-dependencies]

eval = [
    "fmri-fm-eval"
]

[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.uv.sources]
fmri-fm-eval = { git = "https://github.com/clane9/fmri-fm-eval.git", rev = "ac877642bb8dd8c81dd3fadf0562e7f8a858936b" }
nsdcode = { git = "https://github.com/cvnlab/nsdcode.git", rev = "bfd36a503cc90a3eb3ebfd69b269403f7e186924" }
neuromaps = { git = "https://github.com/netneurolab/neuromaps.git", rev = "f0ed67c44d633061b93c6d337a1b233f6895c408" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F722"]
