[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex_mae"
dynamic = ["version"]
description = "CortexMAE fMRI foundation model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "braceexpand",
    "brainmarks",
    "datasets",
    "einops",
    "fsspec",
    "huggingface_hub",
    "jaxtyping",
    "matplotlib",
    "neuromaps",
    "nibabel",
    "nilearn",
    "numpy",
    "omegaconf",
    "pillow",
    "platformdirs",
    "pycortex",
    "s3fs",
    "scikit-learn",
    "scipy",
    "timm",
    "torch>=2.8.0,<2.13.0",
    "torchvision",
    "wandb",
    "webdataset",
]

[dependency-groups]
dev = [
    "ipython",
    "jupyter",
    "pre-commit",
    "pytest",
]

[tool.setuptools_scm]
version_file = "src/cortex_mae/_version.py"

[tool.uv.sources]
neuromaps = { git = "https://github.com/netneurolab/neuromaps.git", rev = "f0ed67c44d633061b93c6d337a1b233f6895c408" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F722"]
